Core: Added support for migrations to database
Currently everytime we add or remove attributes from
DB, users need to rerun the 'rake' task to recreate the
database.

This patch will make possible to update the DB schema
without executing the rake task.

The 'migrations' extension in Sequel will check the 'schema_version'
table and apply all migrations >= than the current schema.

Migrations must be prefixed with the schema number in chronological
order and they are stored in server/lib/db/migrations.

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -46,6 +46,16 @@ Gem::PackageTask.new(spec) do |pkg|
   pkg.need_tar = true
 end
 
+namespace :db do
+  desc 'Execute the database migrations'
+  task 'migrate' do
+    ENV['API_VERBOSE'] = 'true'
+    load File.join(File.dirname(__FILE__), 'lib', 'db.rb')
+    db = Deltacloud.database
+    Sequel::Migrator.apply(db, File.join(File.dirname(__FILE__), 'db', 'migrations'))
+  end
+end
+
 namespace :mock do
   namespace :fixtures do
     desc "Setup Mock driver fixtures"
