--- a/server/Rakefile
+++ b/server/Rakefile
@@ -132,9 +132,9 @@ end
 #       need to investigate in future.
 #
 if RUBY_PLATFORM == 'java'
-  DRIVERS = [:mock, :ec2, :rhevm, :gogrid, :openstack]
+  DRIVERS = [:mock, :ec2, :rhevm, :gogrid, :openstack, :fgcp]
 else
-  DRIVERS = [:mock, :ec2, :rhevm, :google, :gogrid, :openstack]
+  DRIVERS = [:mock, :ec2, :rhevm, :google, :gogrid, :openstack, :fgcp]
 end
 
 desc 'Run all tests'
