* server/Rakefile: fix build on Ruby 1.8.7

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -29,6 +29,8 @@ rescue LoadError
   exit(1)
 end
 
+require 'require_relative' if RUBY_VERSION < '1.9'
+
 $top_srcdir = File.dirname(__FILE__)
 $:.unshift File.join($top_srcdir, 'lib')
 
