Core: Fix for rake cimi:routes
Since we now have initializers, we not longer need to load
config.ru to have all stuff initialized.

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -96,7 +96,8 @@ desc "List the routes defined by Rabbit"
     desc "Print all routes defined for #{frontend.to_s.capitalize}"
     task :routes do
       ENV['API_FRONTEND'] = frontend.to_s
-      load File.join(File.dirname(__FILE__), 'config.ru')
+      require_relative './lib/initialize'
+      Deltacloud.generate_routes
       f_class = (frontend == :cimi) ? CIMI : Deltacloud
       f_class.collections.each do |c|
         puts "\033[1;32;m#{c.name}\33[0m"
