--- a/server/Gemfile
+++ b/server/Gemfile
@@ -13,7 +13,7 @@ group :development do
   gem "rack-test"
   gem "minitest"
   gem "simplecov"
-  gem "webmock"
+  gem "webmock", '< 1.10'  # VCR wants that version
   gem "vcr"
   gem "aws"
 end
